movie model extended and readme.md updated
